linked the font family to the project
Signed-off-by: Heze <64218603+Hcmwebs@users.noreply.github.com>

--- a/public/index.html
+++ b/public/index.html
@@ -11,9 +11,9 @@
 		/>
 		<link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 
-		<link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+		<!-- <link rel="manifest" href="%PUBLIC_URL%/manifest.json" /> -->
 		<link
-			href="https://api.fontshare.com/v2/css?f[]=supreme@400&f[]=nunito@800&display=swap"
+			href="https://api.fontshare.com/v2/css?f[]=supreme@400,300&f[]=nunito@700,800&display=swap"
 			rel="stylesheet"
 		/>
 
